[package]
name = "base-mint"
version = "0.1.0"
edition = "2021"

[dependencies]
op-alloy-network = "0.5.0"
op-alloy-rpc-types = "0.5.0"
alloy = { version = "0.5", features = ["full"] }
eyre = "*"
futures-util = "*"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "full"] }
clap = { version = "4.5.20", features = ["derive", "env"] }
